some ref